--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.2",
     "cors-anywhere": "^0.4.4",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.16.14",
     "livereload-js": "^4.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -30,6 +31,7 @@
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.0.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
@@ -40,6 +42,7 @@
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
     "tachyons": "^4.12.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^3.5.0",
     "webrtc-adapter": "^8.2.3"
   },
@@ -71,5 +74,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
